fixed typo in note

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
     <!-- Сообщение об эксклюзивности -->
     <div id="merchNote" class="merch-note">
-        <p><strong>Note:</strong> Our exclusive merchandise is <span>delivery available</span> at wedsite of mine. In optional you can visit us to grab yours!</p>
+        <p><strong>Note:</strong> Our exclusive merchandise is <span>delivery available now</span> at wedsite of mine. In optional you can visit us to grab yours!</p>
     </div>
 </section>
 
