deleted stripe keys

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 <script src="https://js.stripe.com/v3/"></script>
 <script>
     // Инициализация Stripe
-    const stripe = Stripe('pk_test_51QWk6BA8Xe2YD1W502ut0tr7FSWQMUb11uyJy92KqmGpdKH0vH2y4ArXlExcbPx9mre6Al9dipLmSVzfNCs6f0lS003892xP9b'); // Вставьте ваш Publishable Key
+    const stripe = Stripe(''); // Вставьте ваш Publishable Key
 
     // Корзина
     let cart = [];
